fixed message footer box alignment

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -7,6 +7,10 @@
 	width: 100%;
 }
 
+form.conversations {
+	display: initial;
+}
+
 // #flex-form {
 // 	margin: 0 20rem;
 // }
